[gd_scene load_steps=4 format=3 uid="uid://div20oyybshkw"]

[ext_resource type="Script" path="res://lessons/mirror/mirror_lesson.gd" id="1_byn2p"]
[ext_resource type="PackedScene" uid="uid://ciufjrc1fmyfi" path="res://scenes/FlatMirror/flat_mirror.tscn" id="2_4lugw"]
[ext_resource type="PackedScene" uid="uid://bt1eicy7gakub" path="res://scenes/InvisibleSource/invisible_source.tscn" id="3_skcde"]

[node name="MirrorLesson" type="Node2D"]
script = ExtResource("1_byn2p")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 288)
zoom = Vector2(2, 2)

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
offset_left = 672.0
offset_top = 512.0
offset_right = 1024.0
offset_bottom = 552.0
theme_override_font_sizes/normal_font_size = 24
text = "Any key to continue . . ."

[node name="FlatMirror" parent="." instance=ExtResource("2_4lugw")]
position = Vector2(288, 224)
scale = Vector2(2, 2)
initialAngle = 70.0
isPushable = false

[node name="InvisibleSource" parent="." instance=ExtResource("3_skcde")]
position = Vector2(288, 32)
scale = Vector2(2, 2)
sourceWidth = 3

[node name="FlatMirror2" parent="." instance=ExtResource("2_4lugw")]
position = Vector2(-160, 224)
scale = Vector2(2, 2)
initialAngle = 60.0
isPushable = false
isRotatable = false
isEnergizeable = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 15.0
offset_top = 30.0
offset_right = 208.0
offset_bottom = 94.0
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Mirrors"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
offset_left = 220.0
offset_top = 352.0
offset_right = 284.0
offset_bottom = 416.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "θ2"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
visible = false
offset_left = 527.0
offset_top = 154.0
offset_right = 591.0
offset_bottom = 218.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "θ1"

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
visible = false
offset_left = 662.0
offset_top = 194.0
offset_right = 726.0
offset_bottom = 258.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "θ2"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
offset_left = 480.0
offset_top = 384.0
offset_right = 960.0
offset_bottom = 448.0
theme_override_font_sizes/normal_font_size = 23
text = "Light reflects at the same angle as it hits"

[node name="Normal" type="Line2D" parent="."]
visible = false
position = Vector2(288, 223)
points = PackedVector2Array(0, 0, 0, -85)
width = 2.0

[node name="LeftIncident" type="Line2D" parent="."]
z_index = 3
position = Vector2(288, 225)
points = PackedVector2Array(0, -75, 0, 0, -21, -118)
width = 4.0
joint_mode = 1

[node name="IncidentArc" type="Line2D" parent="LeftIncident"]
z_index = -1
width = 3.0
default_color = Color(1, 0.784314, 0, 1)

[node name="LeftReflected" type="Line2D" parent="."]
z_index = 3
position = Vector2(288, 225)
points = PackedVector2Array(0, -75, 0, 0, -21, -118)
width = 4.0
joint_mode = 1

[node name="ReflectedArc" type="Line2D" parent="LeftReflected"]
z_index = -1
width = 3.0
default_color = Color(1, 0.784314, 0, 1)

[node name="RightIncident" type="Line2D" parent="."]
visible = false
z_index = 3
position = Vector2(608, 226)
points = PackedVector2Array(0, -120, 0, 0, -116, -31)
width = 4.0
joint_mode = 1

[node name="RightReflected" type="Line2D" parent="."]
visible = false
z_index = 3
position = Vector2(608, 226)
points = PackedVector2Array(0, -120, 0, 0, -116, -31)
width = 4.0
joint_mode = 1

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
visible = false
offset_left = 480.0
offset_top = 464.0
offset_right = 960.0
offset_bottom = 504.0
theme_override_font_sizes/normal_font_size = 23
text = "Only 1 side is reflective"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
